Update landing page including features

--- a/index.html
+++ b/index.html
@@ -1,12 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Finizer - Smart Personal Finance Assistant</title>
+  <!-- Google Font -->
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+  <header>
+    <div class="brand">
+      <img src="logo.png" alt="Finizer Logo">
+      <div>
+        <div class="brand-name">Finizer</div>
+        <div class="brand-tagline">Smart personal finance assistant</div>
+      </div>
+    </div>
+    <nav>
+      <a href="#">Home</a>
+      <a href="#">Features</a>
+      <a href="#">About</a>
+      <a href="#">Contact</a>
+    </nav>
+  </header>
+
+  <section class="hero fade-in">
+    <h1>Take Control of Your Finances</h1>
+    <p>Finizer helps you manage, plan, and grow your money smarter with AI-driven insights.</p>
+    <a href="#" class="btn">Get Started</a>
+  </section>
+
+  <section class="features">
+    <div class="feature fade-in">
+      <h3>💡 Smart Insights</h3>
+      <p>Get personalized tips to improve your financial habits.</p>
+    </div>
+    <div class="feature fade-in">
+      <h3>📊 Expense Tracking</h3>
+      <p>Track your spending in real-time with easy visualization.</p>
+    </div>
+    <div class="feature fade-in">
+      <h3>🎯 Goal Setting</h3>
+      <p>Set financial goals and achieve them with guided planning.</p>
+    </div>
+    <div class="feature fade-in">
+      <h3>🔒 Secure & Private</h3>
+      <p>Your financial data is always safe and protected.</p>
+    </div>
+  </section>
+
+  <footer>
+    © 2025 Finizer. All rights reserved.
+  </footer>
+
+  <script src="script.js"></script>
 </body>
 </html>
