--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <header>
     <div class="brand">
-      <img src="logo.png" alt="Finizer Logo">
+      <img src="logooo.png" alt="Finizer Logo">
     </div>
     <nav>
       <a href="#">Home</a>
