--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
   </header>
 
   <section class="hero fade-in">
-    <h1>Take Control of Your Finances</h1>
-    <p>Finizer helps you manage, plan, and grow your money smarter with AI-driven insights.</p>
+    <h1>TWelcome to Finizer</h1>
+    <p>A smart personal finance assistant that helps you manage, plan, and grow your money smarter with AI-driven insights.</p>
     <a href="#" class="btn">Get Started</a>
   </section>
 
