--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   </header>
 
   <section class="hero fade-in">
-    <h1>TWelcome to Finizer</h1>
+    <h1>Welcome to Finizer</h1>
     <p>A smart personal finance assistant that helps you manage, plan, and grow your money smarter with AI-driven insights.</p>
     <a href="#" class="btn">Get Started</a>
   </section>
