--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       <div class="close">&times;</div>
       <img src="finizer name.png" alt="Finizer Logo">
       <form id="signupForm">
-        <input type="text" id="fullname" placeholder="Full Name" required>
+        <input type="text" id="username" placeholder="User Name" required>
         <input type="date" id="birthday" placeholder="Birthday" required>
         <input type="email" id="email" placeholder="Email" required>
         <input type="password" id="password" placeholder="Password" required>
