--- a/dashboard.html
+++ b/dashboard.html
@@ -10,5 +10,71 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="dashboard.css">
 </head>
+<body>
+  <div class="dock">
+  <!-- Dashboard -->
+  <button class="icon" data-app="dashboard" aria-label="Dashboard">
+    <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="gold" stroke-width="2.2" stroke-linecap="round" stroke-linejoin="round">
+  <path d="M3 11L12 3l9 8v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-9z"/>
+  <path d="M9 22V12h6v10"/>
+    </svg>
 
+  </button>
+
+  <!-- Savings -->
+  <button class="icon" data-app="savings" aria-label="Savings">
+   <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="gold" stroke-width="2.2" stroke-linecap="round" stroke-linejoin="round">
+  <path d="M20 13v-2a8 8 0 0 0-16 0v2a8 8 0 0 0 16 0z"/>
+  <circle cx="12" cy="9" r="1.5" fill="gold"/>
+    </svg>
+
+  </button>
+
+  <!-- Bills -->
+  <button class="icon" data-app="bills" aria-label="Bills">
+    <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="gold" stroke-width="2.2" stroke-linecap="round" stroke-linejoin="round">
+  <path d="M6 2h9l5 5v15a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2z"/>
+  <path d="M14 2v6h6"/>
+  <line x1="9" y1="13" x2="15" y2="13"/>
+  <line x1="9" y1="17" x2="15" y2="17"/>
+    </svg>
+
+  </button>
+
+  <!-- Spending -->
+  <button class="icon" data-app="spending" aria-label="Spending">
+    <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="gold" stroke-width="2.2" stroke-linecap="round" stroke-linejoin="round">
+  <rect x="2" y="5" width="20" height="14" rx="2"/>
+  <line x1="2" y1="10" x2="22" y2="10"/>
+  <line x1="6" y1="15" x2="10" y2="15"/>
+    </svg>
+
+  </button>
+
+  <!-- Insight -->
+  <button class="icon" data-app="insight" aria-label="Insight">
+    <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="gold" stroke-width="2.2" stroke-linecap="round" stroke-linejoin="round">
+  <line x1="4" y1="20" x2="4" y2="10"/>
+  <line x1="12" y1="20" x2="12" y2="4"/>
+  <line x1="20" y1="20" x2="20" y2="14"/>
+    </svg>
+
+  </button>
+
+  <!-- Assistant -->
+  <button class="icon" data-app="assistant" aria-label="Assistant">
+    <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="gold" stroke-width="2.2" stroke-linecap="round" stroke-linejoin="round">
+  <rect x="3" y="7" width="18" height="12" rx="4"/>
+  <circle cx="8.5" cy="13" r="1.5" fill="gold"/>
+  <circle cx="15.5" cy="13" r="1.5" fill="gold"/>
+  <line x1="12" y1="3" x2="12" y2="7"/>
+    </svg>
+
+  </button>
+</div>
+
+  <script src="script.js"></script>
+</body>
 </html>
+
+
